Set data-turbolinks-eval to false for bootstrap dependency

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,7 +40,7 @@
       = render 'layouts/flash_messages'
       = yield
 
-    = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+    = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', 'data-turbolinks-eval': false
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/locales/bootstrap-datepicker.es.min.js'
     = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/jquery.devbridge-autocomplete/1.2.24/jquery.autocomplete.min.js'
