--- a/app/views/consultations/_hint.haml
+++ b/app/views/consultations/_hint.haml
@@ -11,7 +11,7 @@
               %i.fa.fa-external-link
           .col-xs-10
             %span
-              %a#show(href="") Historia
+              %a.external-link#show(href="") Historia
       .hint-item
         - if @patient.anamnesis.allergies?
           .row
