--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -200,7 +200,7 @@
         .form-group.col-md-3
           .input-group
             %span.input-group-addon.input-sm Próxima cita
-            - if @consultation.new_record?
+            - if @consultation.new_record? || @consultation.next_appointment.nil?
               = f.text_field :next_appointment, class: "form-control input-sm"
             - else
               = f.text_field :next_appointment, value: @consultation.next_appointment.strftime("%Y-%m-%d"), class: "form-control input-sm"
