--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -38,6 +38,11 @@
                 %i.fa.fa-cog
                 %span.caret
           %ul.dropdown-menu.pull-right
+            %li
+              - if patient.anamnesis?
+                = link_to "Anamnesis", edit_patient_anamnesis_path(patient, patient.anamnesis)
+              - else
+                = link_to "Anamnesis*", new_patient_anamnesis_path(patient)
             - if patient.anamnesis?
               %li
                 = link_to "Consulta", new_patient_consultation_path(patient)
@@ -46,15 +51,10 @@
                 %a(href="#") Consulta
             - if patient.consultations?
               %li
-                = link_to "Última Consulta", edit_patient_consultation_path(patient, patient.consultations.most_recent.id)
+                = link_to "Historia clínica", patient_consultations_path(patient)
             - else
               %li.disabled
-                %a(href="#") Última consulta
-            %li
-              - if patient.anamnesis?
-                = link_to "Anamnesis", edit_patient_anamnesis_path(patient, patient.anamnesis)
-              - else
-                = link_to "Anamnesis*", new_patient_anamnesis_path(patient)
+                %a(href="#") Historia clínica
             %li.divider{:role => "separator"}
             %li
               = link_to "Editar", edit_patient_path(patient)
