--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -1,3 +1,6 @@
+= content_for :nav_option do
+  = active_nav_to('Historia clínica', patient_consultations_path(@patient))
+
 .row
   .col-md-12
     %strong
@@ -27,7 +30,7 @@
 %table.table.table-striped
   %thead
     %tr
-      %th.col-md-10 Consulta
+      %th.col-md-10 Consultas
       %th.col-md-2
   %tbody
   - @patient.consultations.each do |consultation|
