--- a/app/views/anamneses/new.haml
+++ b/app/views/anamneses/new.haml
@@ -1,5 +1,5 @@
 = content_for :nav_option do
-  = active_nav_to('Anamnesis', new_patient_anamnesis_path(@patient.id))
+  = active_nav_to('Anamnesis', new_patient_anamnesis_path(@patient))
 
 = render 'patient'
 = render 'form'
