--- a/app/views/consultations/new.haml
+++ b/app/views/consultations/new.haml
@@ -1,5 +1,5 @@
 = content_for :nav_option do
-  = active_nav_to('Consulta', new_patient_consultation_path(@patient.id))
+  = active_nav_to('Consulta', new_patient_consultation_path(@patient))
 
 = render 'patient'
 = render 'form'
