Update link style for edit medicines

--- a/app/views/medicines/index.haml
+++ b/app/views/medicines/index.haml
@@ -14,4 +14,4 @@
       %td= medicine.name
       %td= medicine.instructions
       %td.text-right
-        = link_to "Editar", edit_medicine_path(medicine)
+        = link_to "Editar", edit_medicine_path(medicine), class: 'btn btn-primary btn-sm'
