--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -11,13 +11,13 @@ body {
   text-decoration: none;
 }
 
-tr.tr-caution {
+.tr-caution {
   background-color: #E55934;
   border-color: #E55934;
   color: #FFF;
 }
 
-tr.tr-advice {
+.tr-advice {
   background-color: #722340;
   border-color: #722340;
   color: #FFF;
@@ -136,7 +136,7 @@ tr.tr-advice {
   transition-duration: 0.4s;
 }
 
-.hint-box.show {
+.hint-box-show {
   margin-right: 0;
 }
 
@@ -159,6 +159,7 @@ tr.tr-advice {
   background: #fafafa;
   border-color: #dddddd;
   border-bottom-left-radius: 2px;
+  -moz-box-shadow: 0 1px 4px 5px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 1px 4px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
   padding-bottom: 8px;
@@ -201,7 +202,7 @@ tr.tr-advice {
   cursor: pointer;
 }
 
-.text-center > span.text-mute {
+.text-center > .text-mute {
   padding-left: 5px;
   font-weight: 500;
 }
