--- a/app/views/consultations/index.haml
+++ b/app/views/consultations/index.haml
@@ -14,46 +14,60 @@
             %i.fa.fa-female
 
 .row
-  .col-md-2
+  .col-md-1.col-xs-4
     %span.semi-strong.text-muted
-      %i.fa.fa-user
+      No. Cédula
+  .col-md-3.col-xs-4
+    %span.semi-strong
       = @patient.identity_card_number
-  .col-md-2
+.row
+  .col-md-1.col-xs-4
     %span.semi-strong.text-muted
-      %i.fa.fa-history
+      Historia
+  .col-md-3.col-xs-4
+    %span.semi-strong
       = @patient.medical_history
 
 .row.pull-right
   .col-md-12
     = link_to "Nueva consulta", new_patient_consultation_path(@patient), class: "btn btn-success"
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th.col-md-10 Consultas
-      %th.col-md-2
-  %tbody
-  - @patient.consultations.each do |consultation|
-    %tr
-      %td
-        .row
-          .col-md-2.text-right
-          .col-md-10
-            %strong
-              %big= consultation.created_at.strftime("%b %d, %Y")
-        - if consultation.reason.present?
-          .row
-            .col-md-2.text-right
-              %span.semi-strong.text-muted Motivo
-            .col-md-10
-              %span
-                = consultation.reason
-        - if consultation.diagnostic_plan.present?
-          .row
-            .col-md-2.text-right
-              %span.semi-strong.text-muted Plan diagnóstico
-            .col-md-10
-              %span.semi-strong
-              = consultation.diagnostic_plan
-      %td.text-right
-        = link_to "Editar", edit_patient_consultation_path(@patient, consultation), class: 'btn btn-primary btn-sm'
+.row
+  .col-md-12
+    %table.table.table-striped
+      %thead
+        %tr
+          %th.col-md-10 Consultas
+          %th.col-md-2
+      %tbody
+      - @consultations.each do |consultation|
+        %tr
+          %td
+            .row
+              .col-md-10.col-md-offset-2
+                %strong
+                  %big= consultation.created_at.strftime("%b %d, %Y")
+            - if consultation.reason.present?
+              .row
+                .col-md-2.text-right.hidden-xs
+                  %span.semi-strong.text-muted Motivo
+                .col-md-2.visible-xs
+                  %span.semi-strong.text-muted Motivo
+                .col-md-10
+                  %span
+                    = consultation.reason
+            - if consultation.diagnostic_plan.present?
+              .row
+                .col-md-2.text-right.hidden-xs
+                  %span.semi-strong.text-muted Plan diagnóstico
+                .col-md-2.visible-xs
+                  %span.semi-strong.text-muted Plan diagnóstico
+                .col-md-10
+                  %span.semi-strong
+                  = consultation.diagnostic_plan
+          %td.text-right
+            = link_to "Editar", edit_patient_consultation_path(@patient, consultation), class: 'btn btn-primary btn-sm'
+
+.row
+  .col-md-12.text-center
+    = paginate @consultations
