Rename personal history to medical history

--- a/app/views/anamneses/_form.haml
+++ b/app/views/anamneses/_form.haml
@@ -6,7 +6,7 @@
     .panel-body
       .row-fluid
         .form-group.col-md-12
-          = f.text_area :personal_history, class: "form-control input-sm"
+          = f.text_area :medical_history, class: "form-control input-sm"
         .form-group.col-md-12
           .input-group
             %span.input-group-addon.input-sm Antecedentes Quirúrgicos
