--- a/app/views/application/_anamnesis.haml
+++ b/app/views/application/_anamnesis.haml
@@ -5,7 +5,7 @@
     .panel-body
       .row-fluid
         .form-group.col-md-12
-          %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.anamnesis.personal_history }
+          %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.anamnesis.medical_history }
         .form-group.col-md-12
           .input-group
             %span.input-group-addon.input-sm Antecedentes Quirúrgicos
