--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,18 +1,17 @@
-/ XXX: Pull out the labels from a config file.
 .row.pull-right
   .col-md-12
-    = link_to "Nuevo paciente", new_patient_path, class: "btn btn-success"
+    = link_to t('patients.button.new'), new_patient_path, class: "btn btn-success"
 
 .row
   .col-md-12
     %table.table.table-striped
       %thead
         %tr
-          %th.col-md-2.hidden-xs Historia
-          %th.col-md-3 Apellidos
-          %th.col-md-3 Nombres
-          %th.col-md-2.hidden-xs Fecha Nacimiento
-          %th.col-md-1 Sexo
+          %th.col-md-2.hidden-xs= t('patients.table-header.history')
+          %th.col-md-3= t('patients.table-header.last-name')
+          %th.col-md-3= t('patients.table-header.first-name')
+          %th.col-md-2.hidden-xs= t('patients.table-header.birthdate')
+          %th.col-md-1= t('patients.table-header.gender')
           %th.col-md-1
       %tbody
       - @patients.each do |patient|
@@ -23,9 +22,9 @@
           %td.hidden-xs= patient.birthdate.strftime("%Y-%m-%d")
           %td
             - if patient.male?
-              %span.label.label-primary Masculino
+              %span.label.label-primary= t('patients.label.male')
             - else
-              %span.label.label-info Femenino
+              %span.label.label-info= t('patients.label.female')
           %td.text-right
             .btn-group
               %button.btn.btn-default.btn-xs.dropdown-toggle{ "aria-expanded": "false",
@@ -43,24 +42,24 @@
               %ul.dropdown-menu.pull-right
                 %li
                   - if patient.anamnesis?
-                    = link_to "Anamnesis", edit_patient_anamnesis_path(patient, patient.anamnesis)
+                    = link_to t('patients.actions.anamnesis'), edit_patient_anamnesis_path(patient, patient.anamnesis)
                   - else
-                    = link_to "Anamnesis*", new_patient_anamnesis_path(patient)
+                    = link_to t('patients.actions.anamnesis-star'), new_patient_anamnesis_path(patient)
                 - if patient.anamnesis?
                   %li
-                    = link_to "Consulta", new_patient_consultation_path(patient)
+                    = link_to t('patients.actions.consultation'), new_patient_consultation_path(patient)
                 - else
                   %li.disabled
-                    %a(href="#") Consulta
+                    %a(href="#")= t('patients.actions.consultation')
                 - if patient.consultations?
                   %li
-                    = link_to "Historia clínica", patient_consultations_path(patient)
+                    = link_to t('patients.actions.clinical-history'), patient_consultations_path(patient)
                 - else
                   %li.disabled
-                    %a(href="#") Historia clínica
-                %li.divider{:role => "separator"}
+                    %a(href="#")= t('patients.actions.clinical-history')
+                %li.divider{ role: "separator" }
                 %li
-                  = link_to "Editar", edit_patient_path(patient)
+                  = link_to t('patients.actions.edit'), edit_patient_path(patient)
 
 .row
   .col-md-12.text-center
