--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -1,31 +1,29 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+.row
+  .col-md-10.col-md-offset-2
+    %h4
+      Editar Usuario
+
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "form-horizontal" }) do |f|
   = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+  .form-group
+    = f.label :email, class: "col-md-2 control-label email"
+    .col-md-10
+      = f.email_field :email, autofocus: true, class: "form-control input-sm"
+  .form-group
+    = f.label :password, class: "col-md-2 control-label"
+    .col-md-10
+      = f.password_field :password, autocomplete: "off", class: "form-control input-sm"
+      %i (dejar en blanco si no quiere cambiarlo)
+  .form-group
+    = f.label :password_confirmation, class: "col-md-2 control-label"
+    .col-md-10
+      = f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-sm"
+  .form-group
+    = f.label :current_password, class: "col-md-2 control-label"
+    .col-md-10
+      = f.password_field :current_password, autocomplete: "off", class: "form-control input-sm"
+      %i (necesitamos tu contraseña actual para confirmar tus cambios)
+  .form-group
+    .col-md-10.col-md-offset-2
+      = link_to "Cancelar", :back, class: "btn"
+      = f.submit "Actualizar", class: "btn btn-primary"
