Update therapeutic plan

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -171,8 +171,8 @@
           %table.table.table-striped.table-hover.table-condensed
             %thead
               %tr
-                %th.col-md-6 Inscripción
-                %th.col-md-6 Suscripción
+                %th.col-md-6 Receta
+                %th.col-md-6 Indicaciones
             %tbody
               = f.fields_for :prescriptions do |ff|
                 %tr
