--- a/app/views/medicines/index.haml
+++ b/app/views/medicines/index.haml
@@ -1,6 +1,7 @@
 / XXX: Pull out the labels from a config file.
-.row.pull-right.align-right
-  = link_to "Nueva medicina", new_medicine_path, class: "btn btn-success"
+.row
+  .col-md-12.text-right
+    = link_to "Nueva medicina", new_medicine_path, class: "btn btn-success"
 
 %table.table.table-striped
   %thead
