--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,5 +1,5 @@
-.row.pull-right
-  .col-md-12
+.row
+  .col-md-12.text-right
     = link_to t('patients.button.new'), new_patient_path, class: "btn btn-success"
 
 .row
