--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,4 +1,11 @@
 .row
+  .col-md-12
+    = form_tag(patients_path, method: 'GET', class: 'navbar-form navbar-left') do
+      .form-group
+        = text_field_tag :search, params[:search], placeholder: 'Apellidos', class: 'form-control'
+      %button.btn.btn-default{ type: "submit" } Buscar
+
+.row
   .col-md-12.text-right
     = link_to t('patients.button.new'), new_patient_path, class: "btn btn-success"
 
