Add search to collections

--- a/app/views/diseases/index.haml
+++ b/app/views/diseases/index.haml
@@ -1,3 +1,5 @@
+= render partial: 'search', locals: { path: diseases_path, placeholder: 'Nombre' }
+
 .row
   .col-md-12.text-right
     = link_to t('diseases.button.new'), new_medicine_path, class: "btn btn-success"
